add Login and Register components

--- a/front-operations/src/styles/challengeApp.scss
+++ b/front-operations/src/styles/challengeApp.scss
@@ -3,8 +3,10 @@
 @import "./abstract/mixins";
 
 
-// pages
-@import "./pages/login";
-
 // components
 @import "./components/forms";
+@import "./components/button";
+
+// pages
+@import "./pages/login";
+@import "./pages/operationScreen";
