--- a/front-operations/src/styles/components/_forms.scss
+++ b/front-operations/src/styles/components/_forms.scss
@@ -2,20 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     .form-floating {
         width: 100%;
     }
-    input {
+    input, select {
         border-radius: 8px;
-        // background-color: $blue-400;
+        background-color: $primary-400;
         border: none;
         width: 100%;
         &:focus {
-            // background-color: $blue-400;
+            background-color: $primary-400;
         }
     }
     label, p {
-        // color: $gray-600;
+         color: $gray-500;
     }
 }
 
@@ -23,11 +24,11 @@
 .form-floating {
     input, textarea {
         border-radius: 8px;
-        // background-color: $blue-400;
+        background-color: $primary-400;
         border: none;
         width: 100%;
         &:focus {
-            // background-color: $blue-400;
+            background-color: $primary-400;
         }
     }
 }
