--- a/front-operations/src/styles/abstract/_variables.scss
+++ b/front-operations/src/styles/abstract/_variables.scss
@@ -9,3 +9,38 @@ $extra-4k: 2560px;
 //fonts
 $font-poppins: 'Poppins', sans-serif;
 $font-open-sans: 'Open Sans', sans-serif;
+
+//colors
+$white: #ffffff;
+$black: #000000;
+
+//alerts
+$hover-light: #14819E;
+$active-light: #106C85;
+$default-success: #357e36;
+$hover-light-success: #44A246;
+$active-dark-success: #265A26;
+$default-error: #B42918;
+$hover-light-error: #E0301F;
+$active-dark-error: #9D2315;
+$default-warning: #E8CE31;
+$light-warning: #F1DE75;
+$dark-warning: #CFB317;
+
+
+//palette
+$primary: #C3B6F2;
+$primary-900:#4D0974;
+$primary-800:#463A8C;
+$primary-700:#695BAE;
+$primary-600:#9385D0;
+$primary-500:#C3B6F2;
+$primary-400:#D4C9F7;
+
+$gray-900:#464B59;
+$gray-500:#464B59;
+$gray-400:#82899B;
+$brown-900:#A68953;
+
+$info:#F2C49B;
+$info-500:#A68953;
