--- a/front-operations/src/styles/abstract/_variables.scss
+++ b/front-operations/src/styles/abstract/_variables.scss
@@ -15,14 +15,17 @@ $white: #ffffff;
 $black: #000000;
 
 //alerts
-$hover-light: #14819E;
-$active-light: #106C85;
+
 $default-success: #357e36;
 $hover-light-success: #44A246;
 $active-dark-success: #265A26;
+$light-success:lighten($color: #357e36, $amount: 20%);
+
 $default-error: #B42918;
 $hover-light-error: #E0301F;
 $active-dark-error: #9D2315;
+$light-error:lighten($color: #B42918, $amount: 18%);
+
 $default-warning: #E8CE31;
 $light-warning: #F1DE75;
 $dark-warning: #CFB317;
