--- a/front-operations/src/styles/components/_button.scss
+++ b/front-operations/src/styles/components/_button.scss
@@ -1,11 +1,18 @@
 .btn{
     background-color: $primary-700;
     &:hover{
+        transition: background-color 0.5s ease-in-out;
         background-color: $primary-800;
+        color:$info
     }
     &:active{
         background-color: $primary-600;
     }
 
     color:$white;
+}
+
+.btn-warning, .btn-danger{
+    border-radius: 5px;
+    margin: 0 5px;
 }
