--- a/front-operations/src/styles/components/_button.scss
+++ b/front-operations/src/styles/components/_button.scss
@@ -16,3 +16,11 @@
     border-radius: 5px;
     margin: 0 5px;
 }
+
+.btn-logout{
+    background-color: $gray-500;
+    &:hover{
+        transition: background-color 0.5s ease-in-out;
+        background-color: $gray-400;
+    }
+}
