--- a/front-operations/src/styles/challengeApp.scss
+++ b/front-operations/src/styles/challengeApp.scss
@@ -14,3 +14,4 @@
 // components
 @import "../components/operations/listOperation.module";
 @import "../components/operations/itemsOperation.module";
+@import "../components/operations/addOperations.module";
